# ocaml-dmarc

./: .git-blame-ignore-revs  .ocamlformat  CHANGES.md  CONTRIBUTING.md  LICENSE.md  README.md  dmarc.opam  dune  dune-project  public-suffix.opam
lib/: dmarc.ml  dmarc.mli  dmarc_lwt.ml  dmarc_lwt.mli  dune  sigs.ml  sigs.mli  value.ml
psuffix/: download.ml  dune  organization_domains.ml  serialize.ml
test/: dune  organization_domains.ml  parser.ml
test/raw/: 001.mail  002.mail  003.mail  004.mail  005.mail  006.mail  007.mail  008.mail
