opam-version: "2.0"
name: "dmarc"
synopsis: "DMARC support in OCaml"
description: "DMARC implementation in OCaml"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/ocaml-dmarc"
doc: "https://dinosaure.github.io/ocaml-dmarc/"
bug-reports: "https://github.com/dinosaure/ocaml-dmarc/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "mrmime" {>= "0.5.0"}
  "uspf" {>= "0.0.2"}
  "dkim" {>= "0.3.1"}
  "public-suffix"
  "dune" {>= "2.9.0"}
  "lwt" {>= "5.4.2"}
  "rresult" {>= "0.6.0"}
  "uri" {>= "4.2.0"}
  "alcotest" {>= "1.4.0" & with-test}
  "dns" {>= "6.1.3"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/blaze.git"
