opam-version: "2.0"
name: "dmarc"
synopsis: "DMARC support in OCaml"
description: "DMARC implementation in OCaml"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/ocaml-dmarc"
doc: "https://dinosaure.github.io/ocaml-dmarc/"
bug-reports: "https://github.com/dinosaure/ocaml-dmarc/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "mrmime" {>= "0.5.0"}
  "uspf"
  "dkim"
  "public-suffix"
  "logs" {>= "0.7.0"}
  "dune" {>= "2.9.0"}
  "lwt" {>= "5.4.2"}
  "uri" {>= "4.2.0"}
  "alcotest" {>= "1.4.0" & with-test}
  "dns" {>= "6.1.3"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/dinosaure/ocaml-dmarc.git"
pin-depends: [
  [ "uspf.dev" "git+https://github.com/mirage/uspf.git#8e829f5dd624d0c05f57e8970d98230ec049fb50" ]
  [ "dkim.dev" "git+https://github.com/mirage/ocaml-dkim.git#4752aa45a3bfa21df0ab2cf0a2daa15552454d53" ]
]
