(executable
 (name organization_domains)
 (libraries dmarc alcotest))

(executable
 (name parser)
 (libraries dmarc alcotest))

(rule
 (alias runtest)
 (action
  (run ./organization_domains.exe)))

(rule
 (alias runtest)
 (deps
  (:test parser.exe)
  (glob_files raw/*.mail))
 (action
  (run %{test} --color=always)))
